--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "dev": "tsx --watch ./index.js",
     "build": "tsc",
-    "start": "node ./dist/index.js"
+    "start": "npm install && node ./dist/index.js"
   },
   "type": "module",
   "keywords": [],
